<resources>
    <string name="app_name" translatable="false">Cameo</string>
    <string name="already_have_account_yet">Already have account? Login now</string>
    <string name="button_register">Register</string>
    <string name="password_label">Password</string>
    <string name="password_helper_text">At least 8 characters</string>
    <string name="email_label">Email</string>
    <string name="email_helper_text">example: user@example.com</string>
    <string name="register_title">Register</string>
    <string name="button_login">Login</string>
    <string name="not_have_account_yet">Don\'t have an account yet? Register now</string>
    <string name="login_title">Login</string>
    <string name="intimacy_text">Greater intimacy</string>
    <string name="convenience_text">From the convenience of home</string>
    <string name="enjoy_text">Ready to be savoured</string>
    <string name="profile_title">Profile</string>
    <string name="name_label">Name</string>
    <string name="done_text">Done</string>
    <string name="error_password">Password is invalid</string>
    <string name="error_email">Email is invalid</string>
    <string name="required_password">Password is required</string>
    <string name="required_email">Email is required</string>
    <string name="required_message">Please fill email and password</string>
    <string name="field_error_message">Please correct the wrong data</string>
    <string name="choose_image_title">Choose picture</string>
    <string name="choose_image_camera">Camera</string>
    <string name="choose_image_gallery">Gallery</string>
    <string name="required_profile_name">Profile name is required</string>
    <string name="required_name_message">Please fill profile name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_label">Home</string>
    <string name="search_label">Search</string>
    <string name="wishlist_label">Wishlist</string>
    <string name="transaction_label">Transaction</string>
    <string name="greetings_text">Halo, %name%</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Token</string>
    <string name="settings_menu">Setting</string>
</resources>