<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/toolbar_group">
        <item
            android:id="@+id/token"
            android:contentDescription="@string/title_notifications"
            android:icon="@drawable/ic_token"
            android:title="@string/title_notifications"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/cart"
            android:contentDescription="@string/title_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/title_cart"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/setting"
            android:contentDescription="@string/settings_menu"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings_menu"
            app:showAsAction="ifRoom" />
    </group>

</menu>